[gd_scene load_steps=56 format=3 uid="uid://c8t8w6hy1nx72"]

[ext_resource type="Script" uid="uid://bth1nvtw1cfbm" path="res://GateGen.gd" id="1_1bvp3"]
[ext_resource type="Shader" uid="uid://bv7d12xjkn6t5" path="res://I.gdshader" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://dr8shwv4lxqef" path="res://staff_bg.gd" id="2_5vw27"]
[ext_resource type="Texture2D" uid="uid://bekp2cq7aajg7" path="res://XX.png" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://hakp8xrvy525" path="res://gryl055-modified.jpg" id="3_4c57u"]
[ext_resource type="Script" uid="uid://bxri6kystv6pu" path="res://compute.gd" id="3_272bh"]
[ext_resource type="Script" uid="uid://dbu1cibh2mto5" path="res://staff_line.gd" id="3_getpj"]
[ext_resource type="Texture2D" uid="uid://tu26pju6e5i0" path="res://StageGrid.png" id="4_82xsv"]
[ext_resource type="Script" uid="uid://8rranpy1yc17" path="res://gate_reservoir.gd" id="4_efxa6"]
[ext_resource type="Texture2D" uid="uid://34o2tjub38pn" path="res://SV.png" id="4_lquwl"]
[ext_resource type="Script" uid="uid://cuakgbwwsgfxc" path="res://p_gates_line.gd" id="4_lswn8"]
[ext_resource type="Script" uid="uid://qm76p0qlkt0n" path="res://state_vector.gd" id="5_7mycd"]
[ext_resource type="Texture2D" uid="uid://d0uwyatvws2od" path="res://Zero.jpg" id="5_facbu"]
[ext_resource type="Script" uid="uid://cpmtgenrtgiyp" path="res://stage_display.gd" id="5_lquwl"]
[ext_resource type="Script" uid="uid://dtg2oq46sdrat" path="res://repeater_control.gd" id="7_0rl1p"]
[ext_resource type="Texture2D" uid="uid://brwnju33vfkn3" path="res://LoopEnd.png" id="7_4lmeg"]
[ext_resource type="Script" uid="uid://bdxsrgu8fv7f3" path="res://reset_loop.gd" id="7_b1qrp"]
[ext_resource type="Texture2D" uid="uid://dngrs8lfgibi7" path="res://LoopReset.png" id="7_come4"]
[ext_resource type="Texture2D" uid="uid://bvxul4dr3e0et" path="res://NoControl.png" id="7_facbu"]
[ext_resource type="Script" uid="uid://dxw22lu1fuafr" path="res://progress_bar.gd" id="7_htxhm"]
[ext_resource type="Texture2D" uid="uid://c6yf6fpn6ryfa" path="res://Progress.png" id="7_jq2sk"]
[ext_resource type="Script" uid="uid://dmn2s51g2e6sh" path="res://repeater_end.gd" id="8_0cp0l"]
[ext_resource type="Texture2D" uid="uid://bbxkgcpfrwhdf" path="res://LoopControl.png" id="8_b1qrp"]
[ext_resource type="Script" uid="uid://0lou564n1cpo" path="res://sv_display.gd" id="9_kek77"]
[ext_resource type="Texture2D" uid="uid://bbv8q1cya0j2f" path="res://ControlBGImg.jpg" id="10_0odxb"]
[ext_resource type="Script" uid="uid://05gmxilqsb5l" path="res://stage_pixel.gd" id="10_4k2k6"]
[ext_resource type="Script" uid="uid://bgjbu5aoshtm6" path="res://gate_reservoir_2.gd" id="11_lswn8"]
[ext_resource type="Texture2D" uid="uid://bjo8qokwbfhms" path="res://GateIcon.png" id="12_dg77c"]
[ext_resource type="Script" uid="uid://cw4uc5bqkh8we" path="res://gate_maker.gd" id="13_cegan"]
[ext_resource type="Texture2D" uid="uid://cbghou8gk36cl" path="res://reset.jpg" id="13_vivmo"]
[ext_resource type="Texture2D" uid="uid://c2kwoleht5u4n" path="res://step.jpg" id="14_2cqfq"]
[ext_resource type="Script" uid="uid://d3tvaw5h4dg76" path="res://reset_button.gd" id="14_074og"]
[ext_resource type="Script" uid="uid://bb6j8k8h5pnug" path="res://step_button.gd" id="15_074og"]
[ext_resource type="Texture2D" uid="uid://donjc8g353wep" path="res://run.jpg" id="15_yaehf"]
[ext_resource type="Script" uid="uid://c0vfgkwvx3uow" path="res://run_button.gd" id="16_2cqfq"]
[ext_resource type="Script" uid="uid://bv7r7xvpwqkmm" path="res://qubit_start.gd" id="16_ryguw"]
[ext_resource type="Texture2D" uid="uid://br060wiudtkl1" path="res://save.png" id="23_qsp4k"]
[ext_resource type="Script" uid="uid://udyaxdyevpw7" path="res://save_button.gd" id="23_xuqvo"]
[ext_resource type="Texture2D" uid="uid://donsbk8v20w1o" path="res://load.png" id="25_seu75"]
[ext_resource type="Script" uid="uid://brrhhinjdke11" path="res://load_button.gd" id="26_htxhm"]
[ext_resource type="Script" uid="uid://c1f3x8x3al4dt" path="res://gate.gd" id="27_a6jrf"]
[ext_resource type="Script" uid="uid://dxmjn8hkti6lb" path="res://control_border_line.gd" id="42_0cp0l"]
[ext_resource type="Script" uid="uid://b8r2xkqw7koks" path="res://control_sv_line_2.gd" id="43_d2t1y"]
[ext_resource type="Script" uid="uid://c20j3mnpt7vqk" path="res://control_right_line.gd" id="43_gngh3"]
[ext_resource type="Script" uid="uid://bdktvft4uxn8d" path="res://control_left_line.gd" id="44_0n3wm"]
[ext_resource type="Script" uid="uid://y1mpntrmq4fc" path="res://control_loop_line.gd" id="45_qnost"]
[ext_resource type="Script" uid="uid://cfcpw3l604xq7" path="res://name_ver.gd" id="47_wnkbs"]

[sub_resource type="Gradient" id="Gradient_0odxb"]
colors = PackedColorArray(0.92156863, 0.88235295, 0.78431374, 1, 0.92156863, 0.88235295, 0.78431374, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lswn8"]
gradient = SubResource("Gradient_0odxb")
width = 512
height = 512

[sub_resource type="ViewportTexture" id="ViewportTexture_cegan"]
viewport_path = NodePath("Stage")

[sub_resource type="Gradient" id="Gradient_0rl1p"]
colors = PackedColorArray(0.1254902, 0.1254902, 0.1254902, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ok6jj"]
gradient = SubResource("Gradient_0rl1p")
width = 20
height = 20
fill_from = Vector2(1, 1)
fill_to = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0xm2m"]
shader = ExtResource("1_ig7tw")
shader_parameter/gateTexture = ExtResource("3_1bvp3")
shader_parameter/inactive = 0.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_4c57u"]

[sub_resource type="LabelSettings" id="LabelSettings_wnkbs"]
font_size = 32
font_color = Color(0.15211344, 0.15211344, 0.15211344, 1)

[node name="MainProcessor" type="Node2D"]
script = ExtResource("1_1bvp3")

[node name="GateHolder" type="Node2D" parent="."]

[node name="StaffBG" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(9.536743e-07, -2.3841858e-07)
scale = Vector2(3.757813, 1.0410157)
texture = SubResource("GradientTexture2D_lswn8")
centered = false
script = ExtResource("2_5vw27")

[node name="StaffLine" type="Line2D" parent="."]
z_index = -3
points = PackedVector2Array(-50, 36, -145, 184)
width = 4.0
default_color = Color(0, 0, 0, 1)
script = ExtResource("3_getpj")

[node name="PGatesLine" type="Line2D" parent="."]
z_index = -4
points = PackedVector2Array(-50, 36, -145, 184)
width = 4.0
default_color = Color(0.74978, 0.74978, 0.7497799, 1)
script = ExtResource("4_lswn8")

[node name="QubitStart" type="TextureButton" parent="."]
z_index = -3
offset_left = 31.0
offset_top = 752.0
offset_right = 91.0
offset_bottom = 817.0
scale = Vector2(0.333, 0.333)
action_mode = 0
texture_normal = ExtResource("5_facbu")
script = ExtResource("16_ryguw")

[node name="RepeaterEnd" type="Sprite2D" parent="."]
position = Vector2(31, 752)
scale = Vector2(1.01, 1)
texture = ExtResource("7_4lmeg")
centered = false
script = ExtResource("8_0cp0l")

[node name="ResetLoop" type="TextureButton" parent="."]
offset_left = 31.0
offset_top = 752.0
offset_right = 91.0
offset_bottom = 817.0
scale = Vector2(1.01, 1)
action_mode = 0
texture_normal = ExtResource("7_come4")
script = ExtResource("7_b1qrp")

[node name="RepeaterControl" type="TextureButton" parent="."]
z_index = -3
offset_left = 31.0
offset_top = 752.0
offset_right = 91.0
offset_bottom = 817.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("7_facbu")
texture_pressed = ExtResource("8_b1qrp")
script = ExtResource("7_0rl1p")

[node name="ProgressBar" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("7_jq2sk")
centered = false
script = ExtResource("7_htxhm")

[node name="StageDisplay" type="Sprite2D" parent="."]
position = Vector2(996, 533)
scale = Vector2(1.5450001, 1.6266668)
texture = SubResource("ViewportTexture_cegan")
centered = false
script = ExtResource("5_lquwl")

[node name="Stage" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
size = Vector2i(600, 300)
render_target_update_mode = 4

[node name="StagePixel" type="Sprite2D" parent="Stage"]
z_index = 1
texture = SubResource("GradientTexture2D_ok6jj")
centered = false
script = ExtResource("10_4k2k6")

[node name="BG" type="Sprite2D" parent="Stage"]
texture = ExtResource("4_82xsv")
centered = false

[node name="GateReservoir" type="Sprite2D" parent="."]
position = Vector2(1.4210855e-14, 530)
scale = Vector2(1.0289352, 0.9702381)
texture = ExtResource("3_4c57u")
centered = false
script = ExtResource("4_efxa6")

[node name="ControlBG" type="Sprite2D" parent="."]
position = Vector2(896, 533.00006)
scale = Vector2(1.0289352, 0.9702381)
texture = ExtResource("10_0odxb")
centered = false
script = ExtResource("11_lswn8")

[node name="Compute" type="SubViewport" parent="."]
disable_3d = true
use_hdr_2d = true
size = Vector2i(2, 16384)
render_target_update_mode = 4
script = ExtResource("3_272bh")

[node name="StateVector" type="Sprite2D" parent="Compute"]
texture_filter = 1
material = SubResource("ShaderMaterial_0xm2m")
texture = ExtResource("4_lquwl")
centered = false
script = ExtResource("5_7mycd")

[node name="SVDisplay" type="Sprite2D" parent="."]
position = Vector2(0, 1080)
rotation = -1.5707964
scale = Vector2(60, 1920)
texture = SubResource("PlaceholderTexture2D_4c57u")
centered = false
script = ExtResource("9_kek77")

[node name="GateMaker" type="TextureButton" parent="."]
offset_left = 31.0
offset_top = 752.0
offset_right = 91.0
offset_bottom = 812.0
action_mode = 0
texture_normal = ExtResource("12_dg77c")
script = ExtResource("13_cegan")

[node name="ResetButton" type="TextureButton" parent="."]
offset_left = 909.0
offset_top = 739.0
offset_right = 981.0
offset_bottom = 811.0
texture_normal = ExtResource("13_vivmo")
script = ExtResource("14_074og")

[node name="SaveButton" type="TextureButton" parent="."]
offset_left = 909.0
offset_top = 739.0
offset_right = 981.0
offset_bottom = 811.0
texture_normal = ExtResource("23_qsp4k")
script = ExtResource("23_xuqvo")

[node name="LoadButton" type="TextureButton" parent="."]
offset_left = 909.0
offset_top = 739.0
offset_right = 981.0
offset_bottom = 811.0
texture_normal = ExtResource("25_seu75")
script = ExtResource("26_htxhm")

[node name="StepButton" type="TextureButton" parent="."]
offset_left = 907.0
offset_top = 647.0
offset_right = 979.0
offset_bottom = 719.0
texture_normal = ExtResource("14_2cqfq")
script = ExtResource("15_074og")

[node name="RunButton" type="TextureButton" parent="."]
offset_left = 908.0
offset_top = 549.0
offset_right = 980.0
offset_bottom = 621.0
texture_normal = ExtResource("15_yaehf")
script = ExtResource("16_2cqfq")

[node name="Gate" type="TextureButton" parent="."]
offset_left = -122.0
offset_top = 41.0
offset_right = -62.0
offset_bottom = 101.0
texture_normal = ExtResource("12_dg77c")
script = ExtResource("27_a6jrf")

[node name="SaveDialog" type="FileDialog" parent="."]
mode_overrides_title = false
filters = PackedStringArray("*.qalg;Quantum Algorithms;Quantum Alg./qalg")

[node name="LoadDialog" type="FileDialog" parent="."]
mode_overrides_title = false
file_mode = 0
filters = PackedStringArray("*.qalg;Quantum Algorithms;Quantum Alg./qalg")

[node name="ControlBorderLine" type="Line2D" parent="."]
z_index = 3
width = 8.0
default_color = Color(0.4, 0.4, 0.4, 1)
script = ExtResource("42_0cp0l")

[node name="ControlRightLine" type="Line2D" parent="."]
z_index = 3
width = 8.0
default_color = Color(0.4, 0.4, 0.4, 1)
script = ExtResource("43_gngh3")

[node name="ControlLeftLine" type="Line2D" parent="."]
z_index = 3
width = 8.0
default_color = Color(0.4, 0.4, 0.4, 1)
script = ExtResource("44_0n3wm")

[node name="ControlLoopLine" type="Line2D" parent="."]
visible = false
z_index = 3
width = 4.0
default_color = Color(0.0016764245, 0.0016764245, 0.0016764245, 1)
script = ExtResource("45_qnost")

[node name="ControlSVLine" type="Line2D" parent="."]
z_index = 3
width = 8.0
default_color = Color(0.4, 0.4, 0.4, 1)
script = ExtResource("43_d2t1y")

[node name="NameVer" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "tinQer V1.0"
label_settings = SubResource("LabelSettings_wnkbs")
script = ExtResource("47_wnkbs")

[connection signal="pressed" from="ResetLoop" to="ResetLoop" method="_on_pressed"]
[connection signal="toggled" from="RepeaterControl" to="RepeaterControl" method="_on_toggled"]
[connection signal="button_down" from="GateMaker" to="GateMaker" method="_on_button_down"]
[connection signal="button_down" from="ResetButton" to="ResetButton" method="_on_button_down"]
[connection signal="button_down" from="SaveButton" to="SaveButton" method="_on_button_down"]
[connection signal="button_down" from="LoadButton" to="LoadButton" method="_on_button_down"]
[connection signal="button_down" from="LoadButton" to="Gate" method="_on_load_button_button_down"]
[connection signal="button_down" from="StepButton" to="StepButton" method="_on_button_down"]
[connection signal="button_down" from="RunButton" to="RunButton" method="_on_button_down"]
